fade transitions and loading spinner added

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
 	<body>
 		<h1>Xbox-Amazon Gamer Feed</h1>
-		<button id="searchUserButton">Search New User</button></p>
-
+		<button id="searchUserButton" class="searchButton">Search New User</button></p>
 		<div id="gamerFeedContainer">
 			<div id="gamerTag"></div>
+			<div id="loading" class="hidden"><img src="img/spinner.gif" /></div>
 			<div id="gamesContainer"></div>
 		</div>
 
